--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="mSharedViewModel"
+            type="com.k3kc.todoapp20.fragments.SharedViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,19 +45,20 @@
             android:id="@+id/no_data_imageView"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
             android:alpha="0.5"
             android:visibility="invisible"
             android:src="@drawable/ic_no_data"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/recyclerView"
-            app:layout_constraintVertical_bias="0.39" />
+            app:layout_constraintTop_toTopOf="@+id/recyclerView" />
 
         <TextView
             android:id="@+id/no_data_textView"
             android:visibility="invisible"
             android:layout_width="wrap_content"
+            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textSize="16sp"
